Prometheus/manifests/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.jarbank.io
    http:
      paths:
       - path: /
         pathType: Prefix      
         backend:
             service:
               name: prometheus-service
               port:
                 number: 8080
